Reflow links for mobile and add a privacy policy disclaimer

--- a/src/app/root.component.scss
+++ b/src/app/root.component.scss
@@ -2,6 +2,8 @@
     height: 100%;
     width: 100%;
     display: flex;
+    position: relative;
+    flex-direction: column;
 }
 
 .root {
@@ -29,4 +31,10 @@
             color: #fff;
         }
     }
+}
+
+
+ul.links {
+    list-style: none;
+    padding: 0;
 }
