--- a/src/app/root.component.html
+++ b/src/app/root.component.html
@@ -1,6 +1,41 @@
-<div class="root" [style.background-image]="'url(' + wallpaper.value?.link + ')'">
+<mat-drawer-container class="root" [style.background-image]="'url(' + wallpaper.value?.link + ')'" autosize>
+    <!-- <mat-tab-group (selectedTabChange)="onTabChange($event)">
+        <mat-tab disabled="true"><ng-template mat-tab-label></ng-template></mat-tab>
+        <mat-tab *ngFor="let link of headLinks"><ng-template mat-tab-label><a [href]="link.url">{{link.label}}</a></ng-template></mat-tab>
+    </mat-tab-group> -->
+    <mat-drawer #drawer mode="side">
+        <ul class="links">
+            <li *ngFor="let link of headLinks">
+                <button mat-button (click)="onButtonClick(link)">
+                    <a [href]="link.url">{{link.label}}</a>
+                </button>
+            </li>
+        </ul>
+        <button mat-icon-button (click)="openInfo()" style="position: absolute; bottom: 16px; left: 16px;"><mat-icon>info</mat-icon></button>
+    </mat-drawer>
 
-</div>
+    <mat-toolbar>
+        <ng-container *ngIf="!isDesktop">
+            <button mat-icon-button (click)="drawer.toggle()">
+                <mat-icon aria-hidden="false" aria-label="Menu">menu</mat-icon>
+            </button>
+        </ng-container>
+        <ng-container *ngIf="isDesktop">
+            <button mat-button *ngFor="let link of headLinks" (click)="onButtonClick(link)">
+                <a [href]="link.url">{{link.label}}</a>
+            </button>
+            <button mat-icon-button (click)="openInfo()"><mat-icon>info</mat-icon></button>
+        </ng-container>
+    </mat-toolbar>
+    <div>
+        <img src="assets/banner.jpg" style="width: 100%">
+    </div>
+
+    <div style="flex: 1">
+        <!-- Snake game... -->
+    </div>
+</mat-drawer-container>
+
 
 <div class="wallpaper-credits">
     <div [innerHTML]="wallpaper.value?.credit"></div>
