--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,22 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "material.scss";
-@import "layout.scss";
+@import "swiper/scss";
+@import "swiper/scss/lazy";
+@import "swiper/scss/pagination";
+@import "swiper/scss/navigation";
 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-html, body { 
+html, body {
     background: #242424;
     color: #eee;
-    height: 100%; 
+    height: 100%;
     width: 100%;
     overflow: hidden;
-}
-
-html.cdk-global-scrollblock {
-    overflow: hidden;
-}
-.windowManager>.cdk-overlay-pane {
-    pointer-events: none;
 }
 
 * {
@@ -28,117 +24,10 @@ p, span {
     user-select: all;
 }
 
-input[type=radio] {
-    position: relative;
 
-    &::before, &::after {
-        content: " ";
-        position: absolute;
-
-        left: -1px;
-        top: -1px;
-
-        border-radius: 50%;
-
-        transition: transform 200ms cubic-bezier(0.755, 0.05, 0.855, 0.06);
-        z-index: 1;
-    }
-
-    &::before {
-        height: 15px;
-        width: 15px;
-        background-color: #353535;
-        border: 1px solid #717171;
-    }
-    &::after {
-        background-color: transparent;
-        height: 6px;
-        width: 6px;
-        transform: translate3d(5.5px, 5.5px, 0);
-    }
+a {
+    color: #fff;
 }
-
-input[type=text] {
-    color: #e6e6e6;
-    background-color: #444544;
-
-    border: 3px solid transparent;
-    border-radius: 4px;
-    outline: none;
-
-    padding: 8px 8px 8px 8px;
-    height: 38px;
-    
-    &:focus {
-        border-color: #fbb86c;
-    }
-    &::placeholder {
-        color: #b5b5b5;
-    }
-}
-
-.breadcrumb {
-    border: 1px solid #171717;
-    border-bottom-color: #000;
-    height: 100%;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    margin: 0;
-
-    &>button {
-        position: relative;
-        padding: 0px 12px;
-        background-color: #00000000;
-        border: none;
-        transition: color 200ms ease;
-
-        &:hover {
-            background-color: #4a4a4a;
-            color: white;
-        }
-
-        &::after {
-            content: "/";
-            position: absolute;
-            left: calc(100% - 0.25em);
-        }
-
-        &:last-of-type {
-            font-weight: bold;
-
-            &::after {
-                content: '';
-            }
-        }
-    }
-}
-
-button {
-    border: 1px solid #272727;
-    border-bottom-color: #0d0d0d;
-    background-color: #404040;
-    border-radius: 5px;
-    min-width: 36px;
-    height: 34px;
-    color: #ccc;
-
-    &[disabled] {
-        background-color: #343434;
-        border-bottom-color: #272727;
-    }
-}
-
-
-
-
-
-
-
-
-
-:root {}
-
 
 ::-webkit-scrollbar {
     width: 8px;
@@ -159,4 +48,10 @@ button {
 
 ::-webkit-scrollbar-corner {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+
+.swiper {
+    width: 100%;
+    height: 100%;
 }
