Fix init resizing issue

--- a/src/app/root.component.html
+++ b/src/app/root.component.html
@@ -31,8 +31,9 @@
         <img src="assets/banner.jpg" style="width: 100%">
     </div>
 
-    <div style="flex: 1">
+    <div style="flex: 1; display: flex; justify-content: center; height: 100%; align-items: center;">
         <!-- Snake game... -->
+        <span>dominance is frank.</span>
     </div>
 </mat-drawer-container>
 
